Bugfix (null keystore.jks file case), refactor.